feat: add cookies consent, gdpr, privacy policy and eula
